--- a/Crossroads.Microservice.Settings/Crossroads.Microservice.Settings/Crossroads.Microservice.Settings.csproj
+++ b/Crossroads.Microservice.Settings/Crossroads.Microservice.Settings/Crossroads.Microservice.Settings.csproj
@@ -9,6 +9,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="VaultSharp" Version="0.11.0" />
-    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.0" />
   </ItemGroup>
 </Project>
