--- a/Crossroads.Microservice.Settings/Crossroads.Microservice.Settings.csproj
+++ b/Crossroads.Microservice.Settings/Crossroads.Microservice.Settings.csproj
@@ -25,4 +25,7 @@
     <PackageReference Include="VaultSharp" Version="0.11.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
 </Project>
